--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "sails-ho",
+  "name": "beta",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
+  "keywords": [],
   "dependencies": {
-    "sails": "0.9.8",
-    "grunt": "0.4.1",
-    "sails-disk": "~0.9.0",
-    "ejs": "0.8.4",
-    "optimist": "0.3.4",
-    "sails-mongo": "~0.9.7",
-    "grunt-contrib-sass": "~0.7.2",
-    "bcryptjs": "~0.7.10",
-    "jade": "~1.1.5",
-    "passport": "~0.2.0",
-    "passport-remember-me": "0.0.1",
-    "node-uuid": "~1.4.1",
-    "passport-local": "~0.1.6",
-    "nib": "~1.0.2",
-    "stylus": "~0.42.2",
-    "coffee-script": "~1.7.1",
-    "grunt-shell": "~0.6.4",
+    "ejs": "~0.8.4",
+    "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
-    "mincer": "~0.5.13",
-    "connect-mincer": "~1.0.0",
-    "uglify-js": "~2.4.12",
-    "clean-css": "~2.1.3"
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "~0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "jade": "^1.3.1",
+    "rc": "~0.3.3",
+    "sails": "~0.10.0-rc7",
+    "sails-disk": "~0.10.0"
   },
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js"
   },
   "main": "app.js",
-  "repository": "",
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/curtisr3v/beta.git"
+  },
+  "author": "curtisr3v",
   "license": ""
 }
