--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^0.7.12",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -20,6 +21,10 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "jade": "^1.3.1",
+    "node-uuid": "^1.4.1",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-remember-me": "0.0.1",
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc7",
     "sails-disk": "~0.10.0"
