Add sails-mongo to dependencies

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-remember-me": "0.0.1",
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc7",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.10.0-rc5"
   },
   "scripts": {
     "start": "node app.js",
