--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "keywords": [],
   "dependencies": {
     "bcryptjs": "^0.7.12",
+    "clean-css": "^2.1.8",
+    "coffee-script": "^1.7.1",
+    "connect-mincer": "^1.0.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -18,9 +21,12 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
+    "grunt-shell": "^0.7.0",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "jade": "^1.3.1",
+    "mincer": "^1.0.3",
+    "nib": "^1.0.2",
     "node-uuid": "^1.4.1",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
@@ -28,7 +34,9 @@
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc7",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.10.0-rc5"
+    "sails-mongo": "^0.10.0-rc5",
+    "stylus": "^0.46.2",
+    "uglify-js": "^2.4.13"
   },
   "scripts": {
     "start": "node app.js",
